more minor spacing, padding, margin fixes

--- a/app/styles/job-filter.scss
+++ b/app/styles/job-filter.scss
@@ -16,6 +16,11 @@
     background-color: #f6f6f6;
   }
 
+  #dropdown-section .row {
+    margin: 0 auto;
+    max-width: 80rem;
+  }
+
   .dropdown {
     height: 2.5rem;
     min-width: 10rem;
