--- a/app/styles/job.scss
+++ b/app/styles/job.scss
@@ -1,6 +1,7 @@
 #job-list {
   width: 100%;
   margin: 0 auto;
+  max-width: 75rem;
   display: flex;
   flex-wrap: wrap;
   justify-content: space-evenly;
